@@ -1,1 +1,1 @@
-10.5.0-digiumphones-rc2
+10.5.0-digiumphones
